# vanespen.art_2025

./: .gitignore  README.md
backend/: api.go  clear.sh  config.go  go.mod  go.sum  handler.go  ingest.sh  main.go  model.go  pictures_database.go  utils.go
backend_go/: clear.sh  go.mod  go.sum  main.go
backend_iex/: .gitignore  README.md  ingest.sh  mix.exs
backend_microservices/: AGENT.md  README.md  docker-compose.dev.yml  go.mod  (+1 more)
backend_python/: #khazad_2022.2.sql#  alembic.ini  create_test_data.py  khazad.sqlite  poetry.toml  pyproject.toml  requirements.txt
backend_python/alembic/: env.py
backend_python/alembic/versions/: 2536eb45e015_add_picture_orientation_info.py  624a908f9124_add_description_on_species.py  9a4aeda4ceb6_add_nullable_on_threat_link.py  9e912e325947_add_galleries.py  d5631eb1243c_add_blured_attribute_for_spiders.py  d5642793d731_add_stared_boolean_attribute_to_pictures.py  f5c6b6003e70_add_all.py
backend_python/app/: app.py
backend_python/app/api/: api.py
backend_python/app/api/endpoints/: gallery.py  login.py  pictures.py  species.py
backend_python/app/api/utils/: security.py
backend_python/app/core/: config.py  exif_extractor.py  storage_driver.py
backend_python/app/crud/: __init__.py  base.py  crud_galleries.py  crud_pictures.py  crud_species.py  crud_users.py
backend_python/app/db/: base.py  init_db.py  session.py
backend_python/app/models/: gallery.py  picture.py  species.py  user.py
backend_python/app/schemas/: filters_list.py  gallery.py  picture.py  picture_species.py  species.py  species_picture.py  user.py
(+141 files in other folders)
